can crudely search and find ping pong ball

--- a/fetchingbot/data/controls.html
+++ b/fetchingbot/data/controls.html
@@ -39,16 +39,16 @@
 
   <table width="100%">
     <tr align='center'>
-      <td><input type='image' src='./images/search.png' width='125' height='125' id="Beg" onclick="btnPressed(id)">Begin Search</input></td>
-      <td><input type='image' src="./images/return.png" width="125" height="125" id="Ret" onclick="btnPressed(id)">Return</input></td>
+      <td><button style="width:125px; height:125px" id="Beg" onclick="btnPressed(id)">Begin Search</input></td>
+      <td><button style="width:125px; height:125px" id="Ret" onclick="btnPressed(id)">Return</input></td>
     </tr>
     <tr align='center'>
-      <td><input type='image' src='./images/crosshairs.png' width='125' height='125' id="App" onclick="btnPressed(id)">Approach</input></td>
-      <td><input type="image" src="./images/deposit.png" width="125" height="125" id="Dep" onclick="btnPressed(id)">Deposit</input></td>
+      <td><button style="width:125px; height:125px" id="App" onclick="btnPressed(id)">Approach</input></td>
+      <td><button style="width:125px; height:125px" id="Dep" onclick="btnPressed(id)">Deposit</input></td>
     </tr>
     <tr align='center'>
-      <td><input type='image' src='./images/grab.png' width="125" height="125" id="Gra" onclick="btnPressed(id)">Grab</input></td>
-      <td><input type="image" src="./images/cancel.png" width='125' height='125' id="Can" onclick="btnPressed(id)">Cancel</input></td>
+      <td><button style="width:125px; height:125px" id="Gra" onclick="btnPressed(id)">Grab</input></td>
+      <td><button style="width:125px; height:125px" id="Can" onclick="btnPressed(id)">Cancel</input></td>
     </tr>
   </table>
   <br>
